force-app/main/default/objects/sugati__Travel_App_Sync_Item__c/sugati__Travel_App_Sync_Item__c.object-meta.xml
<CustomObject>
    <label>Travel App Sync Item</label>
    <nameField>
        <displayFormat>TASI-{0000}</displayFormat>
        <label>Travel App Sync Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel App Sync Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>