force-app/main/default/objects/sugati__Travel_App_Sync_Item__c/fields/sugati__TASI_Day_in_Itinerary__c.field-meta.xml
<CustomField>
    <fullName>sugati__TASI_Day_in_Itinerary__c</fullName>
    <label>Day in Itinerary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>