force-app/main/default/objects/sugati__Travel_App_Sync_Item__c/fields/sugati__TASI_Supplier_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__TASI_Supplier_Booking__c</fullName>
    <label>Supplier Booking</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipLabel>Travel App Sync Items</relationshipLabel>
    <relationshipName>Travel_App_Sync_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>