force-app/main/default/objects/sugati__Travel_App_Sync_Item__c/fields/sugati__TASI_Travel_App_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__TASI_Travel_App_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>An unique identifier to map the record with the external system.</inlineHelpText>
    <label>Travel App Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>