force-app/main/default/objects/sugati__Travel_App_Sync_Item__c/fields/sugati__TASI_Travel_App_Sync__c.field-meta.xml
<CustomField>
    <fullName>sugati__TASI_Travel_App_Sync__c</fullName>
    <label>Travel App Sync</label>
    <referenceTo>sugati__Travel_App_Sync__c</referenceTo>
    <relationshipLabel>Travel App Sync Items</relationshipLabel>
    <relationshipName>Travel_App_Sync_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>