force-app/main/default/objects/sugati__Travel_App_Sync_Item__c/fields/sugati__TASI_Vamoos_Location_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__TASI_Vamoos_Location_Id__c</fullName>
    <label>Vamoos Location Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>